# qprofiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_full_report.py  main.py  pyproject.toml  run_profiler.py  setup.py
examples/: demo_callable.py  demo_pennylane.py  demo_qiskit.py  overhead_comparison.py
python/: __init__.py  benchmark.py  visualize.py
python/adapters/: __init__.py  generic_adapter.py  pennylane_adapter.py  qiskit_adapter.py
python/qprofiler/: __init__.py
src/: benchmark_main.cpp  bindings.cpp  gates.cpp  gates.hpp  kernel_registry.cpp  kernel_registry.hpp  main_h.cpp  profiler.cpp  profiler.hpp  simulator.cpp  simulator.hpp
tests/: test_callable_kernel.py  test_gates.cpp  test_profiler.py  test_registry.cpp
