[project]
name = "qprofiler"
dynamic = ["authors", "classifiers", "optional-dependencies"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pybind11>=3.0.3",
    "pytest>=9.0.2",
    "setuptools>=82.0.1",
]
