[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "qprofiler"
dynamic = ["authors", "classifiers", "optional-dependencies"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pennylane>=0.44.1",
    "pybind11>=3.0.3",
    "pytest>=9.0.2",
    "qiskit>=2.3.1",
    "setuptools>=82.0.1",
]
